--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -26,3 +26,7 @@ required = ?? ? ???.
 min= {0} ????? ???.
 range= {0} ~ {1} ??? ?????.
 max= {0} ?? ?????.
+
+#??
+typeMismatch.java.lang.Integer=??? ??????.
+typeMismatch=?? ?????.
